packages/console/src/pages/SignInExperience/PageContent/Branding/CustomUiForm/index.module.scss
@use '@/scss/underscore' as _;

.titleRow {
  display: inline-flex;
  align-items: center;
  flex-wrap: wrap;
  gap: _.unit(2);
}

.ossCard {
  display: flex;
  align-items: center;
  gap: _.unit(4);
  padding: _.unit(4);
  border: 1px solid rgba(93, 52, 242, 12%);
  border-radius: _.unit(3);
  background: rgba(93, 52, 242, 4%);

  .ossCardContent {
    display: flex;
    align-items: center;
    gap: _.unit(4);
    min-width: 0;
  }

  .ossCardIcon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    flex-shrink: 0;
    border-radius: _.unit(2);
    background: rgba(93, 52, 242, 8%);

    > img {
      width: 20px;
      height: 20px;
    }
  }

  .ossCardDescription {
    font: var(--font-body-2);
    color: var(--color-text);
  }

  .highlight {
    color: var(--color-primary);
  }
}

